<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anders.lektor1.Ovelse3">

    <TextView android:text="@string/øve3_akt_headline" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:id="@+id/øve3_headline"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        style="@android:style/TextAppearance.Material.Headline"
        android:textIsSelectable="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/øve3_image"
        android:layout_below="@+id/øve3_headline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/øve3_akt_but_vej"
        android:id="@+id/øve3_but_vejledning"
        android:layout_below="@+id/øve3_image"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        style="@android:style/DeviceDefault.ButtonBar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/øve3_akt_but_ind"
        android:id="@+id/øve3_but_indstillinger"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/øve3_image"
        android:layout_marginTop="20dp"
        style="@android:style/DeviceDefault.ButtonBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/øve3_akt_text"
        android:id="@+id/øve3_akt_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

</RelativeLayout>
